tests/ui/readschema_reject_count.stderr
error: `ply(count = ...)` is not supported by `#[derive(ReadSchema)]`; supported sub-attributes are: `name`
 --> tests/ui/readschema_reject_count.rs:5:5
  |
5 | /     #[ply(count = "u8")]
6 | |     a: u32,
  | |__________^
